[package]
name = "bt_core_config"
version = "0.2.4"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Core Configuration. Application and Server."

[dependencies]
#bt_app_codes = { git = "https://github.com/bachuetech/bt_app_codes.git", version = "0.1.0" }
bt_logger = "0.2.5"
bt_yaml_utils = "0.1.10"
yaml-rust2 = "0.10.0"
